[package]
name = "pyrv8"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrv8"
crate-type = ["cdylib"]

[dependencies]
# https://github.com/rscarson/rustyscript/issues/399
serde = "=1.0.219"
serde_json = "=1.0.120"
serde_bytes = "=0.11.15"
pyo3 = {version=">=0.23.0, <0.25.0", features = ["experimental-async", "serde"]}
rustyscript = "0.12.3"
serde-pyobject = "=0.6.1"
